embassy-executor/tests/ui/nonstatic_ref_elided.stderr
error: Arguments for tasks must live forever. Try using the `'static` lifetime.
 --> tests/ui/nonstatic_ref_elided.rs:4:18
  |
4 | async fn foo(_x: &u32) {}
  |                  ^
